[package]
name = "well-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.0" }

bdk_chain = {  git = "https://github.com/bitcoindevkit/bdk.git", tag = "v1.0.0-alpha.13" , features = ["serde"]}
bdk_bitcoind_rpc = { git = "https://github.com/bitcoindevkit/bdk.git", tag = "v1.0.0-alpha.13" }
bdk_wallet = { git = "https://github.com/bitcoindevkit/bdk.git", tag = "v1.0.0-alpha.13" , features = ["keys-bip39"]}
bdk_esplora = { git = "https://github.com/bitcoindevkit/bdk.git", tag = "v1.0.0-alpha.13" , features = ["blocking"] }

ctrlc = { version = "^2" }
miniscript = { version = "12.0.0", features = ["serde"], default-features = true }
clap = {version = "4.5.7", features = ["derive"]}
anyhow = "1.0.86"
serde = "1.0.203"
serde_json = "1.0.118"